# fastapi-boilerplate

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/api/v1/: router.py
app/api/v1/endpoints/example/: example.py  schemas.py
app/base/: router.py
app/base/endpoints/health/: health.py  schemas.py
app/base/endpoints/info/: info.py  schemas.py
app/base/endpoints/root/: root.py
app/configs/: logger.py  settings.py
templates/: root.html
tests/: test_main.py
tests/api/v1/endpoints/example/: test_example.py
tests/base/endpoints/health/: test_health.py  test_schemas.py
tests/base/endpoints/info/: test_info.py
tests/base/endpoints/root/: test_root.py
tests/configs/: test_logger.py  test_settings.py
